--- a/templates/index.html
+++ b/templates/index.html
@@ -44,6 +44,7 @@
     </form>
 
     <!-- Image Captioning Result -->
+    {% if your_result %}
     <div class="flex justify-center items-center my-10">
         <div class="max-w-[900px] mx-auto">
             <div class="flex flex-col bg-white shadow-md bg-clip-border rounded-xl card">
@@ -58,5 +59,6 @@
             </div>
         </div>
     </div>
+    {% endif %}
 </body>
 </html>
